--- a/src/index.scss
+++ b/src/index.scss
@@ -9,8 +9,7 @@
   src: url("./Assets/Fonts/Teko-Regular.ttf");
 }
 
-
 body {
-  background: #F1FAEE;
+  background: #f1faee;
   font-family: Teko !important;
 }
