--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,13 @@
   box-sizing: border-box;
 }
 
+h1,
+h2,
+p {
+  margin: 0;
+  padding: 0;
+}
+
 @font-face {
   font-family: Teko;
   src: url("./Assets/Fonts/Teko-Regular.ttf");
