--- a/src/Components/Intro/IntroDesc/IntroDesc.module.scss
+++ b/src/Components/Intro/IntroDesc/IntroDesc.module.scss
@@ -17,3 +17,29 @@
   margin-top: 10px;
   color: #474747;
 }
+
+@media only screen and (max-width: 1081px) {
+  .whole {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .hey {
+    font-size: 4.5rem;
+  }
+
+  .title {
+    font-size: 4.5rem;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .hey {
+    font-size: 4.5rem;
+  }
+
+  .title {
+    font-size: 4.5rem;
+  }
+}
