--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -1,7 +1,7 @@
 @media screen and (max-width: 767px) {
   .nav {
-    background: #003049;
-    color: #f1faee;
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
     margin: 20px 0;
     padding: 15px 0;
   }
