--- a/src/Components/Intro/IntroImage/IntroImage.module.scss
+++ b/src/Components/Intro/IntroImage/IntroImage.module.scss
@@ -2,3 +2,11 @@
   border-radius: 8px;
   width: 90%;
 }
+
+@media only screen and (max-width: 991px) {
+  .intro {
+    width: 70%;
+    display: block;
+    margin: 0 auto;
+  }
+}
