--- a/src/Components/AboutMe/AboutSocial/AboutSocial.module.scss
+++ b/src/Components/AboutMe/AboutSocial/AboutSocial.module.scss
@@ -45,6 +45,8 @@
 
 @media only screen and (max-width: 767px) {
   .socials {
-    margin-top: 40px !important;
+    margin: 40px auto !important;
+    position: relative;
+    right: 50px;
   }
 }
