--- a/src/Components/Header/Navbar/Navbar.module.scss
+++ b/src/Components/Header/Navbar/Navbar.module.scss
@@ -14,3 +14,21 @@
 .nav-item:hover {
   color: #e07a5f;
 }
+
+@media screen and (max-width: 767px) {
+  .nav {
+    width: 130%;
+    text-align: center;
+    background: #003049;
+    color: #f1faee;
+    margin: 20px auto;
+    padding: 15px;
+    position: relative;
+    right: 40px;
+  }
+
+  .nav-item {
+    margin-right: 15px;
+    font-size: 1.2rem;
+  }
+}
