--- a/src/Components/Header/Navbar/Navbar.module.scss
+++ b/src/Components/Header/Navbar/Navbar.module.scss
@@ -40,4 +40,9 @@
     margin-right: 15px;
     font-size: 1.2rem;
   }
+
+  .decor {
+    text-decoration: none;
+    color: #f1faee !important;
+  }
 }
