--- a/src/Components/Intro/Intro.module.scss
+++ b/src/Components/Intro/Intro.module.scss
@@ -1,3 +1,9 @@
 .intro {
   margin-top: 30px !important;
 }
+
+@media screen and (max-width: 767px) {
+  .intro {
+    margin: 0 !important;
+  }
+}
