--- a/src/Components/ContactMe/ContactTitle/ContactTitle.module.scss
+++ b/src/Components/ContactMe/ContactTitle/ContactTitle.module.scss
@@ -1,6 +1,12 @@
 .title {
   text-align: center;
-  font-size: 2.8rem;
+  font-size: 2.7rem;
   color: #003049;
   cursor: default;
+}
+
+@media screen and (max-width: 767px) {
+  .title {
+    font-size: 2rem;
+  }
 }
