--- a/src/Components/AboutMe/AboutMe.module.scss
+++ b/src/Components/AboutMe/AboutMe.module.scss
@@ -2,3 +2,9 @@
   background: #003049;
   margin-top: 60px !important;
 }
+
+@media screen and (max-width: 991px) {
+  .about {
+    margin-top: 30px !important;
+  }
+}
